# mlops-zoomcamp

./: .gitignore  pyproject.toml
01-intro/: duration-prediction.ipynb  homework.ipynb
01-intro/.virtual_documents/: homework.ipynb
02-experiment-tracking/: duration-prediction.ipynb  mlflow.db  model-registry.ipynb
02-experiment-tracking/.virtual_documents/: duration-prediction.ipynb
